sim主题下标题居中

--- a/src/view/index/sim/index.component.scss
+++ b/src/view/index/sim/index.component.scss
@@ -75,6 +75,7 @@ $width: 1200px;
       color: #fff;
       margin-bottom: 10px;
       font-size: 36px;
+      text-align: center;
     }
 
     .description {
