sim主题下修改壁纸为wallhaven-wq6jdr-2mb.png并调整缩放方式

--- a/src/view/index/sim/index.component.scss
+++ b/src/view/index/sim/index.component.scss
@@ -64,6 +64,7 @@ $width: 1200px;
       .bg-item {
         background-repeat: no-repeat;
         background-position: top center;
+        background-size: 100% auto;
       }
     }
     .bar {
