sim主题下添加了下滑箭头

--- a/src/view/index/sim/index.component.html
+++ b/src/view/index/sim/index.component.html
@@ -24,6 +24,8 @@
       <h2 class="description dark-text-active" [innerHTML]="description"></h2>
       <app-search-engine></app-search-engine>
     </div>
+
+    <img class="down-slide-arrow" src="assets/img/arrowdown.svg" alt="">
   </div>
 
   <nav class="top-nav user-select-none dark-border-color">
