sim主题下为下滑箭头添加了动画

--- a/src/view/index/sim/index.component.html
+++ b/src/view/index/sim/index.component.html
@@ -25,7 +25,7 @@
       <app-search-engine></app-search-engine>
     </div>
 
-    <img class="down-slide-arrow" src="assets/img/arrowdown.svg" alt="">
+    <img class="down-slide-arrow shake-vertical" src="assets/img/arrowdown.svg" alt="">
   </div>
 
   <nav class="top-nav user-select-none dark-border-color">
